# padbox

./: .gitignore  Cargo.toml  README.md  flake.nix  padbox.nix
src/: config.rs  eprintln_xxx.rs  error.rs  lib.rs  path_util.rs  project.rs  recipe.rs
